--- a/React_Lucky_Frontend/src/shared/components/Nav/Nav.scss
+++ b/React_Lucky_Frontend/src/shared/components/Nav/Nav.scss
@@ -13,7 +13,11 @@
   &__icon {
     width: 26px;
     height: 26px;
-    object-fit: cover;
+    image-rendering: -moz-crisp-edges; /* Firefox */
+    image-rendering: -o-crisp-edges; /* Opera */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
   }
   &__img {
     width: 32px;
@@ -22,6 +26,11 @@
     border: 1px solid grey;
     object-fit: cover;
     object-position: top;
+    image-rendering: -moz-crisp-edges; /* Firefox */
+    image-rendering: -o-crisp-edges; /* Opera */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
     &--active {
       border: 2px solid var(--color-secondary);
     }
